This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _Py_fopen_obj leaks reference on audit error
Type: resource usage Stage: resolved
Components: Interpreter Core Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: christian.heimes Nosy List: christian.heimes, corona10, miss-islington, steve.dower
Priority: normal Keywords: patch

Created on 2020-06-12 10:20 by christian.heimes, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 20827 merged christian.heimes, 2020-06-12 10:23
PR 20855 merged miss-islington, 2020-06-13 15:57
PR 20856 merged miss-islington, 2020-06-13 15:57
Messages (5)
msg371349 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2020-06-12 10:20
Direct leak of 50 byte(s) in 1 object(s) allocated from:
    #0 0x7f429c681667 in __interceptor_malloc (/lib64/libasan.so.6+0xb0667)
    #1 0x487496 in _PyBytes_FromSize Objects/bytesobject.c:81
    #2 0x487496 in PyBytes_FromStringAndSize Objects/bytesobject.c:112
    #3 0x487496 in PyBytes_FromStringAndSize Objects/bytesobject.c:97
    #4 0x75f140 in unicode_encode_utf8 Objects/unicodeobject.c:5425
    #5 0x7f2052 in PyUnicode_EncodeFSDefault Objects/unicodeobject.c:3660
    #6 0x7f28a7 in PyUnicode_FSConverter Objects/unicodeobject.c:3947
    #7 0xab48ab in _Py_fopen_obj Python/fileutils.c:1459
    #8 0x7f428a713cc5 in _ssl__SSLContext_load_dh_params /home/heimes/dev/python/cpython/Modules/_ssl.c:4293
    #9 0xe03e0c in cfunction_vectorcall_O Objects/methodobject.c:510
    #10 0x4c166a in PyVectorcall_Call Objects/call.c:230
msg371458 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2020-06-13 15:57
New changeset 9672912e8f90374fd31b37ca0fb7cefbc6f4c555 by Christian Heimes in branch 'master':
bpo-40957: Fix refleak in _Py_fopen_obj() (GH-20827)
https://github.com/python/cpython/commit/9672912e8f90374fd31b37ca0fb7cefbc6f4c555
msg371459 - (view) Author: miss-islington (miss-islington) Date: 2020-06-13 16:15
New changeset a8936fa5c09c039ad457dda8bdf733be6cc182e3 by Miss Islington (bot) in branch '3.8':
bpo-40957: Fix refleak in _Py_fopen_obj() (GH-20827)
https://github.com/python/cpython/commit/a8936fa5c09c039ad457dda8bdf733be6cc182e3
msg371460 - (view) Author: miss-islington (miss-islington) Date: 2020-06-13 16:19
New changeset c932f5c1e531f5a3cbf0ce664e4bcd22aa04994d by Miss Islington (bot) in branch '3.9':
bpo-40957: Fix refleak in _Py_fopen_obj() (GH-20827)
https://github.com/python/cpython/commit/c932f5c1e531f5a3cbf0ce664e4bcd22aa04994d
msg371461 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2020-06-13 16:19
Thanks for the work! Christian Heimes
History
Date User Action Args
2022-04-11 14:59:32adminsetgithub: 85129
2020-06-13 16:19:54corona10setstatus: open -> closed
resolution: fixed
messages: + msg371461

stage: patch review -> resolved
2020-06-13 16:19:00miss-islingtonsetmessages: + msg371460
2020-06-13 16:15:12miss-islingtonsetmessages: + msg371459
2020-06-13 15:57:52miss-islingtonsetpull_requests: + pull_request20048
2020-06-13 15:57:40miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request20047
2020-06-13 15:57:30corona10setnosy: + corona10
messages: + msg371458
2020-06-12 10:23:37christian.heimessetkeywords: + patch
stage: patch review
pull_requests: + pull_request20022
2020-06-12 10:20:16christian.heimescreate