bpo-40957: Fix refleak in _Py_fopen_obj() (GH-20827)

Signed-off-by: Christian Heimes <christian@python.org>